# rust-todo

./: Cargo.toml  README.md  index.html
src/: main.rs
src/components/: app.rs  filter_tabs.rs  header.rs  mod.rs  theme_switch.rs  todo_input.rs  todo_item.rs  todo_list.rs
src/hooks/: use_theme.rs
src/models/: mod.rs
styles/: animations.css  base.css  components.css  theme.css
