[package]
name = "todo-app"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
gloo = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde", "js"] }

[dependencies.web-sys]
version = "0.3"
features = [
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "Window",
    "Storage",
    "Event",
    "EventTarget",
    "KeyboardEvent",
    "SubmitEvent",
    "MouseEvent",
    "Node",
]
